fix big wallet's name overflow

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -122,7 +122,7 @@ input:disabled {
 
 .dropdown .trigger {
   @apply bg-transparent border border-transparent rounded outline-none w-full py-4 px-2
-  text-gray-700 gap-2 default-transition items-center inline-flex justify-center 
+  text-gray-700 gap-2 default-transition items-center inline-flex justify-between
   hover:bg-gray-100 hover:border-gray-300 focus:outline-none active:outline-none 
   active:bg-gray-200;
 }
@@ -146,8 +146,12 @@ input:disabled {
 }
 
 .dropdown .items-list .group .group-item {
-  @apply p-4 block cursor-pointer underline-transparent hover:bg-gray-100 
+  @apply p-4 block cursor-pointer underline-transparent hover:bg-gray-100
   active:(outline-none bg-gray-200);
+}
+
+.dropdown .items-list .group .group-item div {
+  @apply w-11/12;
 }
 
 .dropdown .items-list .group .group-item.narrow {
